Set defayult Time to Day Mode Shift and Fix Day Shift UI

--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,6 @@
 @import "tailwindcss";
+
+.bg-\[\#141829\]\/70 {
+    background-color:
+        color-mix(in oklab, #c3c4cb 70%, transparent);
+}
